--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,15 +15,13 @@ colorama = "^0.4.5"
 keyring = "^23"
 pick = "^2.0.2"
 
-[tool.poetry.dev-dependencies]
-flake8 = "^6.0.0"
-pytest = "^7.0.1"
-
 [tool.poetry.scripts]
 falcon = "falcon_toolkit.falcon:cli"
 
 [tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
 pylint = "^2.15.4"
+pytest = "^7.0.1"
 pydocstyle = "^6.1.1"
 toml = "^0.10.2"
 
@@ -48,5 +46,5 @@ disable = [
 ]
 
 [build-system]
-requires = ["poetry-core>=1.0.0a5"]
+requires = ["poetry-core>=1.2.0"]
 build-backend = "poetry.core.masonry.api"
