--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -19,22 +19,18 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v3
+    - name: Install Poetry via pipx
+      run: pipx install poetry
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'poetry'
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install poetry
-        poetry install
+      run: poetry install
     - name: Lint package source with flake8
-      run: |
-        poetry run flake8 falcon_toolkit/ --show-source --statistics
+      run: poetry run flake8 falcon_toolkit/ --show-source --statistics
     - name: Lint package source with pylint
-      run: |
-        poetry run pylint falcon_toolkit/
+      run: poetry run pylint falcon_toolkit/
     - name: Lint package docstrings and comments with pydocstyle
-      run: |
-        poetry run pydocstyle falcon_toolkit/
+      run: poetry run pydocstyle falcon_toolkit/
