--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ cmd2 = "^2.4"
 colorama = "^0.4.5"
 keyring = "^23"
 pick = "^2.0.2"
+tabulate = "^0.9.0"
 
 [tool.poetry.scripts]
 falcon = "falcon_toolkit.falcon:cli"
