--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "falcon-toolkit"
-version = "3.2.0"
+version = "3.3.0"
 description = "Toolkit to interface with CrowdStrike Falcon via the API"
 license = "MIT"
 authors = [
@@ -38,6 +38,7 @@ cmd2 = "^2.4"
 colorama = "^0.4.5"
 keyring = "^23"
 pick = "^2.0.2"
+platformdirs = "^3.5.1"
 tabulate = "^0.9.0"
 
 [tool.poetry.scripts]
