--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install poetry
+        python -m pip install -U setuptools
     - name: Build and publish
       run: |
         poetry config pypi-token.pypi ${{ secrets.PYPI_PUBLISH_TOKEN }}
