--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,16 +30,18 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-caracara = "^0.5.1"
+caracara = "^0.6.0"
 click = "^8.1.3"
-click-option-group = "^0.5.3"
+click-option-group = "^0.5.6"
 click-spinner = "^0.1.10"
 cmd2 = "^2.4"
 colorama = "^0.4.5"
-keyring = ">=23,<25"
-pick = "^2.0.2"
-platformdirs = ">=3.5.1,<5.0.0"
+keyring = "^24.0"
+pick = "^2.2.0"
+platformdirs = "^4.2.0"
 tabulate = "^0.9.0"
+prompt-toolkit = "^3.0.43"
+setuptools = "^69.0"
 
 [tool.poetry.scripts]
 falcon = "falcon_toolkit.falcon:cli"
@@ -72,5 +74,5 @@ disable = [
 ]
 
 [build-system]
-requires = ["poetry-core>=1.2.0"]
+requires = ["poetry-core>=1.2.0", "setuptools", "wheel"]
 build-backend = "poetry.core.masonry.api"
