--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,8 +48,8 @@ falcon = "falcon_toolkit.falcon:cli"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
-pylint = ">=2.15.4,<4.0.0"
-pytest = "^7.0.1"
+pylint = "^3.0.0"
+pytest = "^8.0.1"
 pydocstyle = "^6.1.1"
 toml = "^0.10.2"
 
